Fix menu overflowing and add dev consts for food meter

--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -1,7 +1,7 @@
 .menu {
   display: flex;
   align-items: flex-start;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   transition: 0.2s ease-in-out;
